src/snapshots/ktype__view__tests__running_elapsed_zero.snap
---
source: src/view.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
15                                                                              
                                                                                
the quick brown
