src/snapshots/ktype__view__tests__typing_screen_waiting_snapshot.snap
---
source: src/view.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
ktype  @ punctuation  # numbers   [time] words   [15]  30  60  custom   [←→] cyc
                                                                                
                                                                                
the quick brown fox                                                             
                                                                                
                                                                                
                                                                                
                                                                                
                                   [esc] quit
