src/snapshots/ktype__view__tests__words_mode_running.snap
---
source: src/view.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
ktype  time [words]   10  [25]  50  100   2/4   [tab] restart                   
                                                                                
the quick brown fox                                                             
                                                                                
                                                                                
                                                                                
[esc] quit
